--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,18 +1,13 @@
-<%= render 'hierachy' %>
-
-<div id = "contentPane">
-  <p id = "currentItemOptions">
-    <%= link_to "+ Add Item (To Root)", new_item_path(:pid =>  @items.last.id) %>
-  </p>
+<p id = "currentItemOptions">
+  <%= link_to "+ Add Item (To Root)", new_item_path(:pid =>  @items.last.id) %>
+</p>
 
 <!-- access root children, list children (root children) like in show.html.erb -->
   
 <%= @items.last.title %>
 <%= @items.last.body %>
 
-</div>
-
-<!--
+<!-- schedule for deletion(no one needs this right?)
 <form id = "currentItem">
   <h1><input type = "checkbox" class = "itemCheckbox"/> Ikea Food Tasting </h1>
   <div class = "itemOptions">
