--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,11 @@
 		</header>
 
 		<div id = "main">
+			<%= render 'hierachy' %>
+			
+			<div id = "contentPane">
 			<%= yield %>
+			</div>
 		</div>
 	</div>
 	<footer>
