--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,14 +1,10 @@
-<%= render 'hierachy' %>
-
-<div id = "contentPane">
-
   <% if params[:pid].nil? %>
     <p id = "rootFormTitle">Adding New Item to Root:</p>
   <% else %>
     <p id = "rootFormTitle">Adding New Item:</p>
   <% end %>
 
-  <%= form_for(:item, url: items_path) do |f| %>
+  <%= form_for(:item, url: items_path, html: {id: "add-root-item-form"}) do |f| %>
     <p><%= f.label :title %><%= f.text_field :title, size: 103, required: true %></p>
     <p><%= f.label :body %><%= f.text_field :body, size: 103, required: true %></p>
     <p><%= f.label :task, 'Enable Complete/Incomplete status?' %><%= f.check_box :task %></p>
@@ -19,5 +15,3 @@
       <%= link_to "Cancel", items_path %>
     </p>
   <% end %>
-
-</div>
