Dates in email reminder now in UK format

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,8 +1,9 @@
 <p id = "currentItemOptions">
-  <%= link_to "+ Add Item (To Root)", new_item_path(:pid =>  @items.last.id) %>
+  <%= link_to "+ Add Item (To Root)", new_item_path(:pid =>  @items.last.id) %><!--do we have a before root item?-->
 </p>
 
 <!-- access root children, list children (root children) like in show.html.erb -->
+<p>PAGE UNDER CONSTRUCTION, should list the children of the root just like other pages</p>
   
 <%= @items.last.title %>
 <%= @items.last.body %>
