--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -19,7 +19,7 @@
   
 <!-- TODO patrick/raissa: make this forms work :D  -->
 <form id = "set-email-form">
-  <p>Date: <input type = "text" id = "email-datepicker" size = "9"/><small> MM/DD/YYYY at 0:00</small></p>
+  <p>Date: <input type = "text" id = "email-datepicker" size = "9"/><small> DD/MM/YYYY at 0:00</small></p>
   <p>Recipient(s): <input type = "text" id = "email-recip" size = "80" placeholder = "example@swedishclubwa.com"/></p>
   <p>Send all subchildren too? <input type = "checkbox" id = "email-children"/></p>
   <p class = "newFormOptions">
