--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -137,6 +137,23 @@ header {
 	background-position: 0 0;
 }
 
+.delete {
+	display: block;
+	width: 25px;
+	height: 25px;
+	background: url(<%=asset_path "delete.png"%>) bottom;
+	text-indent: -99999px;
+}
+
+.itemDelete {
+	margin-top: -24px;
+	margin-left: 60px;
+}
+
+.delete:hover {
+	background-position: 0 0;
+}
+
 .itemOptions {
 	display: none;
 
@@ -144,7 +161,7 @@ header {
 	background: #F0F0F0;
 	padding-top: 1px;
 	padding-left: 1px;
-	width: 57px;
+	width: 86px;
 	height: 27px;
 	
 	border: 1px solid;
@@ -164,6 +181,32 @@ h2:hover + .itemOptions {
 }
 
 .itemOptions:hover {
+	display: block;
+}
+
+.emailOptions {
+	display: none;
+	float: right;
+
+	margin-top: -37px;
+	background: #F0F0F0;
+	padding-top: 1px;
+	padding-left: 1px;
+	width: 26px;
+	height: 26px;
+	
+	border: 1px solid;
+	border-bottom-left-radius: 5px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+	box-shadow: rgb(0, 0, 0) 1px 1px 2px 0px;
+}
+
+p:hover + .emailOptions {
+	display: block;
+}
+.emailOptions:hover {
 	display: block;
 }
 
