Formatting of new root item form

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -293,11 +293,11 @@ h2 {
 	border-bottom-right-radius: 7px;
 }
 
-#item_title, #new-root-item-title {
+#item_title {
 	margin-left: 10px;
 }
 
-#item_body, #new-root-item-body {
+#item_body {
 	margin-left: 6px;
 }
 
