--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,17 +1,13 @@
-  <% if params[:pid].nil? %>
-    <p id = "rootFormTitle">Adding New Item to Root:</p>
-  <% else %>
-    <p id = "rootFormTitle">Adding New Item:</p>
-  <% end %>
+<p id = "rootFormTitle">Adding New Item to Root:</p>
 
-  <%= form_for(:item, url: items_path, html: {id: "add-root-item-form"}) do |f| %>
-    <p><%= f.label :title %><%= f.text_field :title, size: 103, required: true %></p>
-    <p><%= f.label :body %><%= f.text_field :body, size: 103, required: true %></p>
-    <p><%= f.label :task, 'Enable Complete/Incomplete status?' %><%= f.check_box :task %></p>
-    <%= hidden_field_tag 'item[pid]', params[:pid] %>
-    <p class = "newFormOptions">
-      <%= f.submit "Confirm item" %>
-      <a id = "add-root-item-clear" href = "#">Clear</a> | 
-      <%= link_to "Cancel", items_path %>
-    </p>
-  <% end %>
+<%= form_for(:item, url: items_path, html: {id: "add-root-item-form"}) do |f| %>
+  <p><%= f.label :title, 'Title: ' %><%= f.text_field :title, size: 103, required: true %></p>
+  <p><%= f.label :body, 'Body: ' %><%= f.text_field :body, size: 103, required: true %></p>
+  <p><%= f.label :task, 'Enable Complete/Incomplete status? ' %><%= f.check_box :task %></p>
+  <%= hidden_field_tag 'item[pid]', params[:pid] %>
+  <p class = "newFormOptions">
+    <%= f.submit "Confirm item" %>
+    <a id = "add-root-item-clear" href = "#">Clear</a> | 
+    <%= link_to "Cancel", items_path %>
+  </p>
+<% end %>
