--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -112,12 +112,19 @@ header {
 /* css for option links */
 
 .edit {
-	margin-left: 32px;
 	display: block;
 	width: 25px;
 	height: 25px;
 	background: url(<%=asset_path "edit.png"%>) bottom;
 	text-indent: -99999px;
+}
+
+.itemEdit {
+	margin-left: 32px;
+}
+
+.emailEdit {
+	margin-left: 3px;
 }
 
 .edit:hover {
@@ -138,6 +145,7 @@ header {
 }
 
 .delete {
+	margin-top: -24px;
 	display: block;
 	width: 25px;
 	height: 25px;
@@ -146,10 +154,13 @@ header {
 }
 
 .itemDelete {
-	margin-top: -24px;
 	margin-left: 60px;
 }
 
+.emailDelete {
+	margin-left: 28px;
+}
+	
 .delete:hover {
 	background-position: 0 0;
 }
@@ -192,8 +203,8 @@ h2:hover + .itemOptions {
 	background: #F0F0F0;
 	padding-top: 1px;
 	padding-left: 1px;
-	width: 26px;
-	height: 26px;
+	width: 55px;
+	height: 27px;
 	
 	border: 1px solid;
 	border-bottom-left-radius: 5px;
