--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,17 +8,18 @@
   <h1><%= @item.title %></h1> <!-- put checkbox here, class: inactive when inactive -->
   <div class = "itemOptions">
     <%= link_to '', edit_item_path(@item.id), class: 'edit itemEdit', title: 'Edit' %>
-	<a id = "set-email" class = "set-email" href = "#" title = "Set Email Reminder"></a>
-	<a id = "delete" class = "delete itemDelete" href = "#" title = "Delete" %></a> <!-- trigger for deleting item -->
+	  <a id = "set-email" class = "set-email" href = "#" title = "Set Email Reminder"></a>
+	  <%= link_to 'Delete', item_path(@item.id), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete itemDelete' %>
   </div>
   <p><%= @item.body %></p>
   <% @item.triggers.each do |trigger| %>
-    <p class = "emailReminder">Email to <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
-    <div class = "emailOptions">
-	  <a class = "edit emailEdit" href = "#" title = "Edit"></a>
-	  <a class = "delete emailDelete" href = "#" title = "Delete"></a>
-	</div>
-	<% end %>
+    <p class = "emailReminder">Email to 
+    <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
+      <div class = "emailOptions">
+    	  <a class = "edit emailEdit" href = "#" title = "Edit"></a>
+    	  <a class = "delete emailDelete" href = "#" title = "Delete"></a>
+  	  </div>
+	  <% end %>
   <% end %>
 </form>
   
