Changed new.html.erb and removed <p> tags.

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -292,6 +292,10 @@ h2 {
 	margin-bottom: -20px;
 }
 
+h3 {
+	font-size: 30px;
+	text-align: center;
+}
 .emailReminder {
 	color: red;
 }
@@ -305,7 +309,7 @@ h2 {
 	margin-top: 0px;
 }
 
-#add-item-form, #add-root-item-form, #set-email-form {
+#add-item-form, #set-email-form {
 	background: #EFF3F6; 
 	padding: 1px 8px 1px 8px; 
 	margin-top: 15px;
@@ -317,12 +321,13 @@ h2 {
 	border-bottom-right-radius: 7px;
 }
 
-#item_title {
-	margin-left: 10px;
+#add-root-item-form input[type=text]{
+	display: block;
+	width: 100%;
+	margin-bottom: 20px;
 }
-
-#item_body {
-	margin-left: 6px;
+#add-root-item-form input[type=submit] {
+	float: left;
 }
 
 #email-datepicker {
@@ -342,8 +347,8 @@ h2 {
 }
 
 .newFormOptions {
-	text-align: center; 
-	font-size: 14px;
+	text-align: center;
+	margin: 0px auto 0px auto;
 }
 
 #rootFormTitle {
