--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -311,7 +311,7 @@ h3 {
 
 #add-item-form, #set-email-form {
 	background: #EFF3F6; 
-	padding: 1px 8px 1px 8px; 
+	padding: 40px 50px; 
 	margin-top: 15px;
 	margin-right: 20px; 
 	border: 1px solid;
@@ -321,13 +321,30 @@ h3 {
 	border-bottom-right-radius: 7px;
 }
 
-#add-root-item-form input[type=text]{
+#add-item-form input[type=text] {
 	display: block;
 	width: 100%;
 	margin-bottom: 20px;
 }
-#add-root-item-form input[type=submit] {
+
+#add-root-item-form input[type=text] {
+	display: block;
+	width: 100%;
+	margin-bottom: 20px;
+}
+
+#add-root-item-form	input[type=submit] {
 	float: left;
+}
+
+#add-item-form	input[type=submit] {
+	float: left;
+}
+
+.newFormOptions {
+	width: 300px;
+	display: block;
+	margin: 25px auto;
 }
 
 #email-datepicker {
@@ -346,10 +363,7 @@ h3 {
 	visibility: hidden;
 }
 
-.newFormOptions {
-	text-align: center;
-	margin: 0px auto 0px auto;
-}
+
 
 #rootFormTitle {
 	text-align: center;
