--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -251,7 +251,7 @@ p:hover + .emailOptions {
 }
 
 ul {
-	margin-left: -25px;
+	margin-left: -30px;
 	list-style-type: circle;
 }
 
@@ -281,6 +281,7 @@ h1 {
 	font-weight: 700; 
 	font-size: 220%; 
 	display: inline-block;
+	margin-top: -5px;
 	margin-bottom: -20px;
 }
 
@@ -288,7 +289,7 @@ h2 {
 	font-weight: 700; 
 	font-size: 160%; 
 	display: inline-block;
-	margin-top: 1px;
+	margin-top: 4px;
 	margin-bottom: -20px;
 }
 
@@ -309,10 +310,9 @@ h3 {
 	margin-top: 0px;
 }
 
-#add-item-form, #setemailform {
+#add-item-form, #set-email-form , #add-root-item-form {
 	background: #EFF3F6; 
-	padding: 40px 50px; 
-	margin-top: 15px;
+	padding: 10px 30px; 
 	margin-right: 20px; 
 	border: 1px solid;
 	border-bottom-left-radius: 7px;
@@ -362,8 +362,6 @@ h3 {
 .inactive {
 	visibility: hidden;
 }
-
-
 
 #rootFormTitle {
 	text-align: center;
