--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,64 +1,26 @@
 <p id = "currentItemOptions">
-  <%= link_to "+ Add Item (To Root)", new_item_path(:pid =>  @items.last.id) %><!--do we have a before root item?-->
+  <%= link_to "+ Add Item (To Root)", new_item_path %> <!-- set at the bottom of this page i guess -->
 </p>
 
-<!-- access root children, list children (root children) like in show.html.erb -->
-<p>PAGE UNDER CONSTRUCTION, should list the children of the root just like other pages</p>
-  
-<%= @items.last.title %>
-<%= @items.last.body %>
-
-<!-- schedule for deletion(no one needs this right?)
-<form id = "currentItem">
-  <h1><input type = "checkbox" class = "itemCheckbox"/> Ikea Food Tasting </h1>
+<form>
+  <% @items.each do |child| %>
+  <h2><%= link_to child.title, child %></h2> <!-- put checkbox here, class: inactive when inactive -->
   <div class = "itemOptions">
-    <a id = "edit" href = "#" title = "Edit"></a>
-    <a id = "set-email" href = "#" title = "Set Email Reminder"></a>
+  	<%= link_to '', edit_item_path(child), class: 'edit itemEdit', title: 'Edit' %>
+	<a class = "set-email" href = "#" title = "Set Email Reminder" name="<%= child.id %>"></a> <!--todo umm do we need to put a hidden form for every child item? im sure theres a better way-->
+	<a class = "delete itemDelete" href = "#" title = "Delete" %></a>
   </div>
-  <p>The Swedish clubs annual trip to Ikea</p>
+  <p>
+  <% #raw() needed to display html %>
+  <%= raw(child.body) %>
+  </p>
+  <% child.triggers.each do |trigger| %>
+  <p class = "emailReminder">Email to <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
+  <div class = "emailOptions">
+	<a class = "edit emailEdit" href = "#" title = "Edit"></a>
+	<a class = "delete emailDelete" href = "#" title = "Delete"></a>
+  </div>
+  <% end %>
+  <% end %>
+  <% end %>
 </form>
-
-<form id = "set-email-form">
-<p>Date: <input type = "text" id = "email-datepicker" size = "9"/><small> MM/DD/YYYY at 0:00</small></p>
-<p>Recipient(s): <input type = "text" id = "email-recip" size = "80" placeholder = "example@swedishclubwa.com"/></p>
-<p>Send all subchildren too? <input type = "checkbox" id = "email-children"/></p>
-<p class = "newFormOptions">
-  <a id = "set-email-confirm" href = "#">Set Email Reminder</a> | 
-  <a id = "set-email-clear" href = "#">Clear</a> | 
-  <a id = "set-email-cancel" href = "#">Cancel</a>
-</p>
-</form>
-
-<form id = "currentItemChildren">
-  <h2><input type = "checkbox" class = "itemCheckbox"/><a href = "#"> Transport</a></h2>
-  <p>A bus needs to be hired from Hireabus.com</p>
-  <p class = "emailReminder">Email to peterthonnel@swedishclub.com at 0:00 12/12/2013</p>
-  <h2><input type = "checkbox" class = "itemCheckbox"/><a href = "#"> Transport2</a></h2>
-  <p>A bus needs to be hired from Hireabus.com</p>
-  <p class = "emailReminder">Email to peterthonnel@swedishclub.com at 0:00 12/12/2013</p>
-</form>
-
-<form id = "add-item-form">
-<p>Title: <input type = "text" id = "new-item-title" size = "80"/></p>
-<p>Body: <input type = "text" id = "new-item-body" size = "80"/></p>
-<p>Enable Complete/Incomplete status? <input type = "checkbox" id = "new-item-active"/></p>
-<p class = "newFormOptions">
-  <a id = "add-item-confirm" href = "#">Confirm Item</a> | 
-  <a id = "add-item-clear" href = "#">Clear</a> | 
-  <a id = "add-item-cancel" href = "#">Cancel</a>
-</p>
-</form>
-
-<form id = "add-root-item-form">
-<p id = "rootFormTitle">Adding New Item to Root:</p>
-<p>Title: <input type = "text" id = "new-root-item-title" size = "80"/></p>
-<p>Body: <input type = "text" id = "new-root-item-body" size = "80"/></p>
-<p>Enable Complete/Incomplete status? <input type = "checkbox" id = "new-root-item-active"/></p>
-<p class = "newFormOptions">
-  <a id = "add-root-item-confirm" href = "#">Confirm Item</a> | 
-  <a id = "add-root-item-clear" href = "#">Clear</a> | 
-  <a id = "add-root-item-cancel" href = "#">Cancel</a>
-</p>
-</form>
-</div>
--->
