--- a/app/views/items/_hierachy.html.erb
+++ b/app/views/items/_hierachy.html.erb
@@ -1,15 +1,5 @@
 <div id = "hierachyDiv">
   <p id = "itemToRoot"><br/><%= link_to "+ Add Item To Root", new_item_path %></p>
-  <ul>
-    <% @items.each do |root_item| %>
-      <ul>
-        <li><%= link_to root_item.title, root_item %></li>
-        <ul>
-          <% root_item.descendents.each do |item| %>
-            <li><%= link_to item.title, item %></li>
-          <% end %>
-        </ul>
-      </ul>
-    <% end %>
+  <ul><%= render :partial => 'item', :collection => Item.find_all_by_parent_id(nil) %></ul>
   </ul>
 </div>
