--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -10,7 +10,7 @@
   <%= f.label :task, 'Enable Complete/Incomplete status?' %>
   <%= f.check_box :task %>
 
-  <%= hidden_field_tag 'item[pid]', @item.pid %>
+  <%= hidden_field_tag 'item[parent_id]', @item.parent_id %>
 
   <div class = "newFormOptions">
     <%= f.submit "Confirm item" %>
