Added checkbox visuals in the website, but needs to be able to edit and 'complete items'
Also fixed division line from being cut off when the hierachy was too
long

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -247,7 +247,10 @@ p:hover + .emailOptions {
 
 #hierachyDiv {
 	float: left;
+	margin-top: 18px;
+	padding-right: 15px;
 	width: 165px;
+	border-right: 1px solid;
 }
 
 ul {
@@ -357,6 +360,7 @@ h3 {
 
 .itemCheckbox {
 	margin-left: -24px;
+	margin-right: 11px;
 }
 
 .inactive {
