--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -7,7 +7,7 @@
   <%= f.label :body %>
   <%= f.text_field :body, required: true %>
 
-  <%= f.label :task, 'Enable Complete/Incomplete status?' %>
+  <%= f.label :task, 'Set as task?' %>
   <%= f.check_box :task %>
   
   <%= hidden_field_tag 'item[parent_id]', params[:parent_id] %>
