Moved position of the mouse-over item options, get rid of the empty white space

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -173,13 +173,12 @@ header {
 	-o-transition: visibility 0s linear 0.5s,opacity 0.5s linear;
 	transition: visibility 0s linear 0.5s,opacity 0.5s linear;
 	
+	float: right;
 	position: relative;
-	margin-left: 20px;
-	margin-top: -2px;
-	margin-bottom: -10px;
 	background: #F0F0F0;
 	padding-top: 1px;
 	padding-left: 1px;
+	margin-top: -48px;
 	width: 86px;
 	height: 27px;
 	z-index: 1;
@@ -283,17 +282,13 @@ ul {
 h1 {
 	font-weight: 700; 
 	font-size: 220%; 
-	display: inline-block;
 	margin-top: -5px;
-	margin-bottom: -20px;
 }
 
 h2 {
 	font-weight: 700; 
 	font-size: 160%; 
-	display: inline-block;
-	margin-top: 4px;
-	margin-bottom: -20px;
+
 }
 
 h3 {
