--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,62 +1,50 @@
-<p id = "currentItemOptions">
+<p id="currentItemOptions">
   <%= link_to "+ Add Item", '#', id: 'add-item' %> |
-  <a href = "<%= @item.parent_id %>">Go Up</a> <!-- not in rails link_to format..does it matter? -->
+  <a href="<%= @item.parent_id %>">Go Up</a> <!-- not in rails link_to format..does it matter? -->
 </p>
 
-<form id = "currentItem">
+<form id="item<%= @item.id %>">
   <h1><% if @item.task %><input type="checkbox" class="itemCheckbox"<% if @item.complete %> checked<% end %> disabled/><% end %><%= @item.title %></h1>
-  <div class = "itemOptions">
+  <div class="itemOptions">
     <%= link_to '', edit_item_path(@item.id), class: 'edit itemEdit', title: 'Edit' %>
-    <a id = "set-email" class = "set-email" href = "#" title = "Set Email Reminder" name="<%= @item.id %>"></a>
+    <a id="set-email" class="set-email" href="#" title="Set Email Reminder" name="<%= @item.id %>"></a>
     <%= link_to '', item_path(@item.id), method: :delete, data: { confirm: 'Are you sure you want to delete this item?' }, class: 'delete itemDelete' %>
   </div>
   <p><%= @item.body %></p>
   <% @item.triggers.each do |trigger| %>
-    <p class = "emailReminder">Email to 
+    <p class="emailReminder">Email to 
     <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
-      <div class = "emailOptions">
-        <a class = "edit emailEdit" href = "#" title = "Edit"></a>
-        <a class = "delete emailDelete" href = "#" title = "Delete"></a>
+      <div class="emailOptions">
+        <a class="edit emailEdit" href="#" title="Edit"></a> <!-- TODO, edit email triggers -->
+        <a class="delete emailDelete" href="#" title="Delete"></a> <!-- TODO, delete email triggers -->
       </div>
     <% end %>
   <% end %>
 </form>
-  
-<%= form_tag({:controller => 'triggers', :action => 'create'}, {:id => "set-email-form"}) do %>
-  <p><%= label_tag(:datepicker, "Date:") %> <%= text_field_tag(:datepicker) %> <small> at 0:00</small></p>
-  <p><%= label_tag(:emailrecip, "Recipients:") %>  <%= collection_select(:trigger_email, :email_id, Email.all, :id, :email, { :multiple => true }) %></p>
-  <p><%= label_tag(:emailchildren, "Send all subchildren too?") %> <%= check_box_tag(:emailchildren) %><%= hidden_field_tag(:parent_id, "") %></p>
-  <p class = "newFormOptions">
-  <%= submit_tag("Set email reminder") %> | 
-  <a id = "set-email-clear" href = "#">Clear</a> | 
-  <a id = "set-email-cancel" href = "#">Cancel</a>
-  </p>
-<% end %>
 
-  
-<form id = "currentItemChildren">
-  <% @children.each do |child| %>
+<% @children.each do |child| %>
+<form id="item<%= child.id %>" class="currentItemChildren">
   <h2><% if child.task %><input type="checkbox" class="itemCheckbox"<% if child.complete %> checked<% end %> disabled/><% end %><%= link_to child.title, child %></h2>
-  <div class = "itemOptions">
+  <div class="itemOptions">
     <%= link_to '', edit_item_path(child), class: 'edit itemEdit', title: 'Edit' %>
-  <a class = "set-email" href = "#" title = "Set Email Reminder" name="<%= child.id %>"></a> <!--todo umm do we need to put a hidden form for every child item? im sure theres a better way-->
-  <%= link_to '', item_path(child.id), method: :delete, data: { confirm: 'Are you sure you want to delete this item?' }, class: 'delete itemDelete' %>
+    <a class="set-email" href="#" title="Set Email Reminder" name="<%= child.id %>"></a>
+    <%= link_to '', item_path(child.id), method: :delete, data: { confirm: 'Are you sure you want to delete this item?' }, class: 'delete itemDelete' %>
   </div>
   <p>
   <% #raw() needed to display html %>
   <%= raw(child.body) %>
   </p>
   <% child.triggers.each do |trigger| %>
-  <p class = "emailReminder">Email to <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
-  <div class = "emailOptions">
-  <a class = "edit emailEdit" href = "#" title = "Edit"></a>
-  <a class = "delete emailDelete" href = "#" title = "Delete"></a>
+  <p class="emailReminder">Email to <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
+  <div class="emailOptions">
+    <a class="edit emailEdit" href="#" title="Edit"></a> <!-- TODO, edit email triggers -->
+    <a class="delete emailDelete" href="#" title="Delete"></a> <!-- TODO, delete email triggers -->
   </div>
   <% end %>
   <% end %>
-  <% end %>
 </form>
-  
+
+<% end %>
 <%= form_for(:item, url: items_path, html: {id: "add-item-form"}) do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title, required: true, value: '' %>
@@ -69,9 +57,21 @@
 
   <%= hidden_field_tag 'item[parent_id]', @item.id %>
   
-  <div class = "newFormOptions">
+  <div class="newFormOptions">
     <%= f.submit "Confirm item" %> | 
   <%= link_to "Clear", '#', id: "add-item-clear" %> | 
-    <a id = "add-item-cancel" href = "#">Cancel</a>
+    <a id="add-item-cancel" href="#">Cancel</a>
   </div>
+<% end %>
+
+
+<%= form_tag({:controller => 'triggers', :action => 'create'}, {:id => "set-email-form"}) do %>
+  <p><%= label_tag(:datepicker, "Date:") %> <%= text_field_tag(:datepicker) %> <small> at 0:00</small></p>
+  <p><%= label_tag(:emailrecip, "Recipients:") %>  <%= collection_select(:trigger_email, :email_id, Email.all, :id, :email, { :multiple => true }) %></p>
+  <p><%= label_tag(:emailchildren, "Send all subchildren too?") %> <%= check_box_tag(:emailchildren) %><%= hidden_field_tag(:parent_id, "") %></p>
+  <p class="newFormOptions">
+  <%= submit_tag("Set email reminder") %> | 
+  <a id="set-email-clear" href="#">Clear</a> | 
+  <a id="set-email-cancel" href="#">Cancel</a>
+  </p>
 <% end %>
