--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,26 +1,57 @@
 <p id = "currentItemOptions">
-  <%= link_to "+ Add Item (To Root)", new_item_path %> <!-- set at the bottom of this page i guess -->
+  <%= link_to "+ Add Item (To Root)", '#', id: 'add-item' %>
 </p>
 
-<form>
-  <% @items.each do |child| %>
-<h2><% if child.task %><input type="checkbox" class="itemCheckbox"<% if child.complete %> checked<% end %> disabled/><% end %><%= link_to child.title, child %></h2>
-  <div class = "itemOptions">
+<% @items.each do |child| %>
+<form id="item<%= child.id %>">
+  <h2><% if child.task %><input type="checkbox" class="itemCheckbox"<% if child.complete %> checked<% end %> disabled /><% end %><%= link_to child.title, child %></h2>
+  <div class="itemOptions">
     <%= link_to '', edit_item_path(child), class: 'edit itemEdit', title: 'Edit' %>
-  <a class = "set-email" href = "#" title = "Set Email Reminder" name="<%= child.id %>"></a> <!--todo umm do we need to put a hidden form for every child item? im sure theres a better way-->
-  <%= link_to '', item_path(child.id), method: :delete, data: { confirm: 'Are you sure you want to delete this item?' }, class: 'delete itemDelete' %>
+    <a class="set-email" href="#" title="Set Email Reminder" name="<%= child.id %>"></a>
+    <%= link_to '', item_path(child.id), method: :delete, data: { confirm: 'Are you sure you want to delete this item?' }, class: 'delete itemDelete' %>
   </div>
   <p>
-  <% #raw() needed to display html %>
-  <%= raw(child.body) %>
+    <% #raw() needed to display html %> 
+    <%= raw(child.body) %>
   </p>
   <% child.triggers.each do |trigger| %>
-  <p class = "emailReminder">Email to <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
-  <div class = "emailOptions">
-  <a class = "edit emailEdit" href = "#" title = "Edit"></a>
-  <a class = "delete emailDelete" href = "#" title = "Delete"></a>
+  <p class="emailReminder">Email to <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
+  <div class="emailOptions">
+    <a class="edit emailEdit" href="#" title="Edit"></a> <!-- TODO, edit email triggers -->
+    <a class="delete emailDelete" href="#" title="Delete"></a> <!-- TODO, delete email triggers -->
   </div>
-  <% end %>
   <% end %>
   <% end %>
 </form>
+
+<% end %>
+<%= form_for(:item, url: items_path, html: {id: "add-item-form"}) do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title, required: true, value: '' %>
+
+  <%= f.label :body %>
+  <%= f.text_field :body, required: true, value: '' %>
+
+  <%= f.label :task, 'Set As Task?' %>
+  <%= f.check_box :task, value: '' %>
+
+  <%= hidden_field_tag 'item[parent_id]', params[:parent_id] %>
+  
+  <div class="newFormOptions">
+    <%= f.submit "Confirm Item" %> | 
+    <%= link_to "Clear", '#', id: "add-item-clear" %> | 
+    <a id="add-item-cancel" href="#">Cancel</a>
+  </div>
+<% end %>
+
+
+<%= form_tag({:controller => 'triggers', :action => 'create'}, {:id => "set-email-form"}) do %>
+  <p><%= label_tag(:datepicker, "Date:") %> <%= text_field_tag(:datepicker) %> <small> at 0:00</small></p>
+  <p><%= label_tag(:emailrecip, "Recipients:") %>  <%= collection_select(:trigger_email, :email_id, Email.all, :id, :email, { :multiple => true }) %></p>
+  <p><%= label_tag(:emailchildren, "Send all subchildren too?") %> <%= check_box_tag(:emailchildren) %><%= hidden_field_tag(:parent_id, "") %></p>
+  <p class="newFormOptions">
+  <%= submit_tag("Set email reminder") %> | 
+  <a id="set-email-clear" href="#">Clear</a> | 
+  <a id="set-email-cancel" href="#">Cancel</a>
+  </p>
+<% end %>
