--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,7 +4,7 @@
 </p>
 
 <form id="item<%= @item.id %>">
-  <h1><% if @item.task %><input type="checkbox" class="itemCheckbox"<% if @item.complete %> checked<% end %> disabled/><% end %><%= @item.title %></h1>
+  <h1><% if @item.task %><input type="checkbox" class="itemCheckbox"<% if @item.complete %> checked<% end %> disabled /><% end %><%= @item.title %></h1>
   <div class="itemOptions">
     <%= link_to '', edit_item_path(@item.id), class: 'edit itemEdit', title: 'Edit' %>
     <a id="set-email" class="set-email" href="#" title="Set Email Reminder" name="<%= @item.id %>"></a>
@@ -12,27 +12,27 @@
   </div>
   <p><%= @item.body %></p>
   <% @item.triggers.each do |trigger| %>
-    <p class="emailReminder">Email to 
-    <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
-      <div class="emailOptions">
-        <a class="edit emailEdit" href="#" title="Edit"></a> <!-- TODO, edit email triggers -->
-        <a class="delete emailDelete" href="#" title="Delete"></a> <!-- TODO, delete email triggers -->
-      </div>
-    <% end %>
+  <p class="emailReminder">Email to 
+  <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
+  <div class="emailOptions">
+    <a class="edit emailEdit" href="#" title="Edit"></a> <!-- TODO, edit email triggers -->
+    <a class="delete emailDelete" href="#" title="Delete"></a> <!-- TODO, delete email triggers -->
+  </div>
   <% end %>
+<% end %>
 </form>
 
 <% @children.each do |child| %>
 <form id="item<%= child.id %>" class="currentItemChildren">
-  <h2><% if child.task %><input type="checkbox" class="itemCheckbox"<% if child.complete %> checked<% end %> disabled/><% end %><%= link_to child.title, child %></h2>
+  <h2><% if child.task %><input type="checkbox" class="itemCheckbox"<% if child.complete %> checked<% end %> disabled /><% end %><%= link_to child.title, child %></h2>
   <div class="itemOptions">
     <%= link_to '', edit_item_path(child), class: 'edit itemEdit', title: 'Edit' %>
     <a class="set-email" href="#" title="Set Email Reminder" name="<%= child.id %>"></a>
     <%= link_to '', item_path(child.id), method: :delete, data: { confirm: 'Are you sure you want to delete this item?' }, class: 'delete itemDelete' %>
   </div>
   <p>
-  <% #raw() needed to display html %>
-  <%= raw(child.body) %>
+    <% #raw() needed to display html %>
+    <%= raw(child.body) %>
   </p>
   <% child.triggers.each do |trigger| %>
   <p class="emailReminder">Email to <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
@@ -52,14 +52,14 @@
   <%= f.label :body %>
   <%= f.text_field :body, required: true, value: '' %>
 
-  <%= f.label :task, 'Set as task?' %>
+  <%= f.label :task, 'Set As Task?' %>
   <%= f.check_box :task, value: '' %>
 
   <%= hidden_field_tag 'item[parent_id]', @item.id %>
   
   <div class="newFormOptions">
-    <%= f.submit "Confirm item" %> | 
-  <%= link_to "Clear", '#', id: "add-item-clear" %> | 
+    <%= f.submit "Confirm Item" %> | 
+    <%= link_to "Clear", '#', id: "add-item-clear" %> | 
     <a id="add-item-cancel" href="#">Cancel</a>
   </div>
 <% end %>
