--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset = "utf-8"/>
+  <meta charset="utf-8"/>
   <title> Club Process System - Swedish Club of WA </title>
   <%= stylesheet_link_tag "application" %>
   <%= stylesheet_link_tag "http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" %>
@@ -11,24 +11,25 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-  <div id = "container">
+  <div id="container">
     <header>
-      <div id = "itemsTitleDiv">
-        <%= link_to items_path do %>
-          <p id = "title1">Swedish Club of WA</p>
-          <p id = "title2"><i>Club Process System</i></p>
-        <% end %>
+      <div id="itemsTitleDiv">
+        <%= link_to items_path do %><p id="title1">Swedish Club of WA</p>
+        <p id="title2"><i>Club Process System</i></p><% end %>
       </div>
-      <div id = "logoutTab">
-        <p id = "logout"><%= link_to "Log Out", signout_path, method: "delete" %></p>
+      <div id="logoutTab">
+        <p id="logout"><%= link_to "Log Out", signout_path, method: "delete" %></p>
       </div>
     </header>
 
-    <div id = "main">
-      <%= render 'hierachy' %>
+    <div id="main">
+	
+<%= render 'hierachy' %>
       
-      <div id = "contentPane">
-      <%= yield %>
+      <div id="contentPane">
+	  
+<%= yield %>
+
       </div>
     </div>
   </div>
