Clean up of unused javascript

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -39,7 +39,7 @@
   <div class="newFormOptions">
     <%= f.submit "Confirm Item" %> | 
     <%= link_to "Clear", '#', id: "add-item-clear" %> | 
-    <a id="add-item-cancel" href="#">Cancel</a>
+    <%= link_to "Cancel", '#', id: "add-item-cancel" %>
   </div>
 <% end %>
 
